[package]
name = "busd"
version = "0.1.0"
authors = ["Zeeshan Ali Khan <zeeshanak@gnome.org>"]
description = "A simple D-Bus bus (broker) implementation"
edition = "2021"
license = "MIT"
readme = "README.md"
rust-version = "1.60"
repository = "https://github.com/zeenix/busd"
keywords = ["D-Bus", "DBus", "IPC"]
categories = ["network-programming"]

[lib]
name = "busd"
path = "src/lib.rs"

[[bin]]
name = "busd"
path = "src/bin/busd.rs"

[dependencies]
zbus = { git = "https://gitlab.freedesktop.org/dbus/zbus/", features = ["tokio"], default-features = false }
#zbus = { version = "3.4.0", features = ["tokio"], default-features = false }
nix = "0.27.1"
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread", "signal", "tracing", "fs" ] }
clap = { version = "4.4.1", features = ["derive"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter" , "fmt", "ansi"], default-features = false, optional = true }
anyhow = "1.0.75"
# Explicitly depend on serde to enable `rc` feature.
serde = { version = "1.0.188", features = ["rc"] }
futures-util = "0.3.28"
parking_lot = "0.12.1"
enumflags2 = "0.7.7"
ntest = "0.9.0"
console-subscriber = { version = "0.1.10", optional = true }
hex = "0.4.3"
xdg-home = "1.0.0"
rand = "0.8.5"

[features]
default = ["tracing-subscriber"]
